Created arrow trap. need to do collision manager stuff for it. Fixed a problem with ghosts teleporting. changed griffins to sue time based wandering rather than distacne so that they eventually change direction if they get stuck. added the draw and update stuff for ghosts and griffins vectors, since i realsied i hadn't called them in the update loop yet

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ArrowTrap.cpp" />
     <ClCompile Include="b2GLDraw.cpp" />
     <ClCompile Include="BombItem.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="WallCell.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ArrowTrap.h" />
     <ClInclude Include="b2GLDraw.h" />
     <ClInclude Include="BombItem.h" />
     <ClInclude Include="Camera.h" />
