GoldenIdol trap that spawns a boulder after a delay if picking it up. again has contact stuff in collisionListener. Special in that the collision listener lets the player pick the idol up when they're moving over it by pressing the up arrow, unlike everything else that is triggered straight away on contact. done becasue the boulder will instakill, so they should be sure they want the idol before taking it

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="FloorCell.cpp" />
     <ClCompile Include="HermesBoots.cpp" />
     <ClCompile Include="HermesHelm.cpp" />
+    <ClCompile Include="IdolBoulderTrap.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="mazeGeneration.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="GameItems.h" />
     <ClInclude Include="HermesBoots.h" />
     <ClInclude Include="HermesHelm.h" />
+    <ClInclude Include="IdolBoulderTrap.h" />
     <ClInclude Include="ItemHolder.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="mazeGeneration.h" />
@@ -191,6 +193,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="TorchLight.h" />
+    <ClInclude Include="TrapHolder.h" />
     <ClInclude Include="Treasure.h" />
     <ClInclude Include="TreasureChest.h" />
     <ClInclude Include="WallCell.h" />
