Added more stuff for A* pathfinding in mazegeneration.h and cpp. started the minotaur class. Mostly just testing the impact of updating it's path on performance. updates it's path to follow the playter. limited it to updating the path every 5 seconds using a timer to prevent the impact on FPS

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Medusa.cpp" />
     <ClCompile Include="MedusaHead.cpp" />
     <ClCompile Include="MiniMap.cpp" />
+    <ClCompile Include="Minotaur.cpp" />
     <ClCompile Include="NonBodyWallCell.cpp" />
     <ClCompile Include="playerArrow.cpp" />
     <ClCompile Include="PlayerCharacter.cpp" />
@@ -181,6 +182,8 @@
     <ClInclude Include="Medusa.h" />
     <ClInclude Include="MedusaHead.h" />
     <ClInclude Include="MiniMap.h" />
+    <ClInclude Include="Minotaur.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="NonBodyWallCell.h" />
     <ClInclude Include="playerArrow.h" />
     <ClInclude Include="PlayerCharacter.h" />
