--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="IdolBoulderTrap.cpp">
       <Filter>Source Files\Traps</Filter>
     </ClCompile>
+    <ClCompile Include="Minotaur.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -292,6 +295,12 @@
     </ClInclude>
     <ClInclude Include="TrapHolder.h">
       <Filter>Header Files\Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Header Files\GameEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="Minotaur.h">
+      <Filter>Header Files\GameCharcters\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
