Minotaur updates, spawn manager updates, updated the level transiiton to delete new objects,etc, I hadn't done yet. added timer for the minotaurs spawn. currently set to spawn after 2 and a half minutes

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj.filters
@@ -166,7 +166,7 @@
       <Filter>Source Files\Traps</Filter>
     </ClCompile>
     <ClCompile Include="Minotaur.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\GameCharcters\Enemies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
