added a stun trap and added it's collision, added it to all the relevant places (spawnmanager,levelManager,etc). changed spawnmanager to check for floor below some of the objects (traps,chests) before spawning and added 10 to the ypositions of the traps, since that's the value i'd designed them around ( they don't have gravity so without the + 10 they're in the air)

--- a/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
+++ b/Thesauros Labyrinthos/Thesauros Labyrinthos.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="soundManager.cpp" />
     <ClCompile Include="SpawnManager.cpp" />
     <ClCompile Include="SpikeTrap.cpp" />
+    <ClCompile Include="StunTrap.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="TorchLight.cpp" />
     <ClCompile Include="Treasure.cpp" />
@@ -194,6 +195,7 @@
     <ClInclude Include="SpawnManager.h" />
     <ClInclude Include="SpikeTrap.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="StunTrap.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="TorchLight.h" />
     <ClInclude Include="TrapHolder.h" />
